--- a/jabatan.html
+++ b/jabatan.html
@@ -123,7 +123,7 @@
                                 <tr>
                                     <td>1</td>
                                     <td>KD001</td>
-                                    <td>System Architect</td>
+                                    <td>Kepala Bagian</td>
                                     <td>
                                         <div class="d-flex justify-content-around">
                                             <button class="btn btn-warning btn-sm" title="Edit">
@@ -138,7 +138,7 @@
                                 <tr>
                                     <td>2</td>
                                     <td>KD002</td>
-                                    <td>Accountant</td>
+                                    <td>Kepala Sub Bagian</td>
                                     <td>
                                         <div class="d-flex justify-content-around">
                                             <button class="btn btn-warning btn-sm" title="Edit">
@@ -153,7 +153,7 @@
                                 <tr>
                                     <td>3</td>
                                     <td>KD003</td>
-                                    <td>Junior Technical Author</td>
+                                    <td>Staff</td>
                                     <td>
                                         <div class="d-flex justify-content-around">
                                             <button class="btn btn-warning btn-sm" title="Edit">
@@ -168,7 +168,7 @@
                                 <tr>
                                     <td>4</td>
                                     <td>KD004</td>
-                                    <td>Senior Javascript Developer</td>
+                                    <td>Warek I</td>
                                     <td>
                                         <div class="d-flex justify-content-around">
                                             <button class="btn btn-warning btn-sm" title="Edit">
