--- a/karyawan.html
+++ b/karyawan.html
@@ -106,24 +106,33 @@
                             <thead>
                                 <tr>
                                     <th>Nomor</th>
-                                    <th>Nama Karyawan</th>
-                                    <th>Kode Karyawan</th>
+                                    <th>Kode</th>
+                                    <th>Nama</th>
+                                    <th>Email</th>  
+                                    <th>Alamat</th>
+                                    <th>Jabatan</th>
                                     <th>Aksi</th>
                                 </tr>
                             </thead>
                             <tfoot>
                                 <tr>
                                     <th>Nomor</th>
-                                    <th>Nama Karyawan</th>
-                                    <th>Kode Karyawan</th>
+                                    <th>Kode</th>
+                                    <th>Nama</th>
+                                    <th>Email</th>  
+                                    <th>Alamat</th>
+                                    <th>Jabatan</th>
                                     <th>Aksi</th>
                                 </tr>
                             </tfoot>
                             <tbody>
                                 <tr>
                                     <td>1</td>
-                                    <td>Ajru Ramadhan</td>
                                     <td>KY001</td>
+                                    <td>Ajru Ramadhan</td>
+                                    <td>ajruramadhan25@gmail.com</td>
+                                    <td>JL. Pahlawan Seribu</td>
+                                    <td>Staff</td>
                                     <td>
                                         <div class="d-flex justify-content-around">
                                             <button class="btn btn-warning btn-sm" title="Edit">
@@ -137,8 +146,11 @@
                                 </tr>
                                 <tr>
                                     <td>2</td>
-                                    <td>Siti Aminah</td>
                                     <td>KY002</td>
+                                    <td>Lucinta Lunox</td>
+                                    <td>lucintalunox@gmail.com</td>
+                                    <td>JL. Land Of Dawn</td>
+                                    <td>Kepala Bagian</td>
                                     <td>
                                         <div class="d-flex justify-content-around">
                                             <button class="btn btn-warning btn-sm" title="Edit">
@@ -152,8 +164,11 @@
                                 </tr>
                                 <tr>
                                     <td>3</td>
-                                    <td>John Doe</td>
                                     <td>KY003</td>
+                                    <td>Nina</td>
+                                    <td>Nina@gmail.com</td>
+                                    <td>JL. Heart II</td>
+                                    <td>Kepala Sub Bagian</td>
                                     <td>
                                         <div class="d-flex justify-content-around">
                                             <button class="btn btn-warning btn-sm" title="Edit">
@@ -167,8 +182,29 @@
                                 </tr>
                                 <tr>
                                     <td>4</td>
-                                    <td>Jane Smith</td>
                                     <td>KY004</td>
+                                    <td>Lantai Licin</td>
+                                    <td>licin@gmail.com</td>
+                                    <td>JL. Motorola 12</td>
+                                    <td>Warek I</td>
+                                    <td>
+                                        <div class="d-flex justify-content-around">
+                                            <button class="btn btn-warning btn-sm" title="Edit">
+                                                <i class="fas fa-edit text-white"></i>
+                                            </button>
+                                            <button class="btn btn-danger btn-sm" title="Hapus">
+                                                <i class="fas fa-trash text-white"></i>
+                                            </button>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                    <td>KY005</td>
+                                    <td>Kuronya</td>
+                                    <td>kuronya@gmail.com</td>
+                                    <td>JL. Polok</td>
+                                    <td>Warek I</td>
                                     <td>
                                         <div class="d-flex justify-content-around">
                                             <button class="btn btn-warning btn-sm" title="Edit">
