--- a/absensi.html
+++ b/absensi.html
@@ -110,8 +110,8 @@
                                     <tbody>
                                         <tr>
                                             <td>1</td>
-                                            <td>John Doe</td>
-                                            <td>2023-11-01</td>
+                                            <td>Ajru Ramadhan</td>
+                                            <td>2024-11-25</td>
                                             <td>Jakarta</td>
                                             <td>08:00</td>
                                             <td>17:00</td>
@@ -121,8 +121,8 @@
                                         </tr>
                                         <tr>
                                             <td>2</td>
-                                            <td>Jane Smith</td>
-                                            <td>2023-11-01</td>
+                                            <td>Nina</td>
+                                            <td>2024-11-25</td>
                                             <td>Bandung</td>
                                             <td>09:00</td>
                                             <td>18:00</td>
@@ -132,8 +132,8 @@
                                         </tr>
                                         <tr>
                                             <td>3</td>
-                                            <td>Michael Johnson</td>
-                                            <td>2023-11-01</td>
+                                            <td>Lucinta Lunox</td>
+                                            <td>2024-11-25</td>
                                             <td>Surabaya</td>
                                             <td>08:30</td>
                                             <td>17:30</td>
@@ -143,8 +143,8 @@
                                         </tr>
                                         <tr>
                                             <td>4</td>
-                                            <td>Emily Davis</td>
-                                            <td>2023-11-01</td>
+                                            <td>Kuronya</td>
+                                            <td>2024-11-25</td>
                                             <td>Medan</td>
                                             <td>09:15</td>
                                             <td>18:15</td>
@@ -165,9 +165,9 @@
                     <div class="d-flex align-items-center justify-content-between small">
                         <div class="text-muted">UTS Raden Achmad Ajru Ramadhan</div>
                         <div>
-                            <a href="#">Privacy Policy</a>
+                            <a href="#">221011400261</a>
                             &middot;
-                            <a href="#">Terms &amp; Conditions</a>
+                            <a href="#">05TPLP006</a>
                         </div>
                     </div>
                 </div>
