--- a/index.html
+++ b/index.html
@@ -109,16 +109,19 @@
             <div id="layoutSidenav_content">
                 <main>
                     <div class="container-fluid px-4">
-                        <h1 class="mt-4">Sistem Informasi Manajemen Karyawan</h1>
+                        <h1 class="mt-4" style="color: white;">Sistem Informasi Manajemen Karyawan</h1>
                         <ol class="breadcrumb mb-4">
-                            <li class="breadcrumb-item active">Admin Dashboard</li>
+                            <li class="breadcrumb-item active" style="color: white;">Admin Dashboard</li>
                         </ol>
                         <div class="row">
                             <div class="col-xl-3 col-md-6">
                                 <div class="card bg-primary text-white mb-4">
                                     <div class="card-body d-flex align-items-center">
                                         <i class="fas fa-users fa-2x custom-icon"></i>
-                                        <span>Data Pegawai</span>
+                                        <div class="ms-3">
+                                            <span>Data Pegawai</span> 
+                                            <h4 class="mb-0">5</h4> <!-- Displaying count here -->
+                                        </div>
                                     </div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
                                         <a class="small text-white stretched-link" href="karyawan.html">View Details</a>
@@ -127,10 +130,13 @@
                                 </div>
                             </div>
                             <div class="col-xl-3 col-md-6">
-                                <div class="card bg-warning text-white mb-4">
+                                <div class="card bg-success text-white mb-4">
                                     <div class="card-body d-flex align-items-center">
                                         <i class="fas fa-calendar-check fa-2x custom-icon"></i>
-                                        <span>Absensi Hari Ini</span>
+                                        <div class="ms-3">
+                                            <span>Absensi Hari Ini</span>
+                                            <h4 class="mb-0">4</h4> <!-- Displaying count here -->
+                                        </div>
                                     </div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
                                         <a class="small text-white stretched-link" href="absensi.html">View Details</a>
@@ -139,10 +145,13 @@
                                 </div>
                             </div>
                             <div class="col-xl-3 col-md-6">
-                                <div class="card bg-success text-white mb-4">
+                                <div class="card bg-warning text-white mb-4">
                                     <div class="card-body d-flex align-items-center">
                                         <i class="fas fa-check-circle fa-2x custom-icon"></i>
-                                        <span>Izin Menunggu Konfirmasi</span>
+                                        <div class="ms-3">
+                                            <span>Izin Menunggu Konfirmasi</span>
+                                            <h4 class="mb-0">1</h4> <!-- Displaying count here -->
+                                        </div>
                                     </div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
                                         <a class="small text-white stretched-link" href="izin.html">View Details</a>
@@ -151,10 +160,13 @@
                                 </div>
                             </div>
                             <div class="col-xl-3 col-md-6">
-                                <div class="card bg-danger text-white mb-4">
+                                <div class="card bg-warning text-white mb-4">
                                     <div class="card-body d-flex align-items-center">
                                         <i class="fas fa-clock fa-2x custom-icon"></i>
-                                        <span>Lembur Menunggu Konfirmasi</span>
+                                        <div class="ms-3">
+                                            <span>Lembur Menunggu Konfirmasi</span>
+                                            <h4 class="mb-0">1</h4> <!-- Displaying count here -->
+                                        </div>
                                     </div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
                                         <a class="small text-white stretched-link" href="lembur.html">View Details</a>
@@ -163,6 +175,7 @@
                                 </div>
                             </div>
                         </div>
+                        
                     </div>
                 </main>
                 <footer class="py-4 bg-light mt-auto">
@@ -170,9 +183,9 @@
                         <div class="d-flex align-items-center justify-content-between small">
                             <div class="text-muted">UTS Raden Achmad Ajru Ramadhan</div>
                             <div>
-                                <a href="#">Privacy Policy</a>
+                                <a href="#">221011400261</a>
                                 &middot;
-                                <a href="#">Terms &amp; Conditions</a>
+                                <a href="#">05TPLP006</a>
                             </div>
                         </div>
                     </div>
