--- a/jabatan.html
+++ b/jabatan.html
@@ -191,9 +191,9 @@
                     <div class="d-flex align-items-center justify-content-between small">
                         <div class="text-muted">UTS Raden Achmad Ajru Ramadhan</div>
                         <div>
-                            <a href="#">Privacy Policy</a>
+                            <a href="#">221011400261</a>
                             &middot;
-                            <a href="#">Terms &amp; Conditions</a>
+                            <a href="#">05TPLP006</a>
                         </div>
                     </div>
                 </div>
