--- a/pages/add_divisi.html
+++ b/pages/add_divisi.html
@@ -121,7 +121,7 @@
                                 Tambah Jabatan
                             </div>
                             <div class="card-body">
-                                <form action="add_jabatan.html" method="POST">
+                                <form action="../jabatan.html" method="POST">
                                     <div class="mb-3">
                                         <label for="kode_jabatan" class="form-label">Kode Jabatan</label>
                                         <input type="text" class="form-control" id="kode_jabatan" name="kode_jabatan" required />
@@ -146,9 +146,9 @@
                         <div class="d-flex align-items-center justify-content-between small">
                             <div class="text-muted">UTS Raden Achmad Ajru Ramadhan</div>
                             <div>
-                                <a href="#">Privacy Policy</a>
+                                <a href="#">221011400261</a>
                                 &middot;
-                                <a href="#">Terms &amp; Conditions</a>
+                                <a href="#">05TPLP006</a>
                             </div>
                         </div>
                     </div>
