--- a/izin.html
+++ b/izin.html
@@ -112,16 +112,16 @@
                                     <tbody>
                                         <tr>
                                             <td>1</td>
-                                            <td>John Doe</td>
+                                            <td>Ajru Ramadhan</td>
                                             <td>Sakit</td>
-                                            <td>2023-11-01</td>
+                                            <td>2024-11-25</td>
                                             <td>09:00</td>
                                             <td>Flu</td>
                                             <td><span class="badge bg-success">Disetujui</span></td>
                                         </tr>
                                         <tr>
                                             <td>2</td>
-                                            <td>Jane Smith</td>
+                                            <td>Nina</td>
                                             <td>Cuti</td>
                                             <td>2023-11-02</td>
                                             <td>08:30</td>
@@ -130,7 +130,7 @@
                                         </tr>
                                         <tr>
                                             <td>3</td>
-                                            <td>Michael Johnson</td>
+                                            <td>Lucinta Lunox</td>
                                             <td>Izin</td>
                                             <td>2023-11-03</td>
                                             <td>10:00</td>
@@ -139,7 +139,7 @@
                                         </tr>
                                         <tr>
                                             <td>4</td>
-                                            <td>Emily Davis</td>
+                                            <td>Kuronya</td>
                                             <td>Cuti</td>
                                             <td>2023-11-04</td>
                                             <td>11:00</td>
@@ -159,9 +159,9 @@
                     <div class="d-flex align-items-center justify-content-between small">
                         <div class="text-muted">UTS Raden Achmad Ajru Ramadhan</div>
                         <div>
-                            <a href="#">Privacy Policy</a>
+                            <a href="#">221011400261</a>
                             &middot;
-                            <a href="#">Terms &amp; Conditions</a>
+                            <a href="#">05TPLP006</a>
                         </div>
                     </div>
                 </div>
