--- a/lembur.html
+++ b/lembur.html
@@ -113,8 +113,8 @@
                                     <tbody>
                                         <tr>
                                             <td>1</td>
-                                            <td>John Doe</td>
-                                            <td>2023-11-01</td>
+                                            <td>Ajru Ramadhan</td>
+                                            <td>2024-11-25</td>
                                             <td>17:00</td>
                                             <td>20:00</td>
                                             <td>Proyek A</td>
@@ -123,8 +123,8 @@
                                         </tr>
                                         <tr>
                                             <td>2</td>
-                                            <td>Jane Smith</td>
-                                            <td>2023-11-01</td>
+                                            <td>Nina</td>
+                                            <td>2024-11-25</td>
                                             <td>18:00</td>
                                             <td>21:00</td>
                                             <td>Proyek B</td>
@@ -133,8 +133,8 @@
                                         </tr>
                                         <tr>
                                             <td>3</td>
-                                            <td>Michael Johnson</td>
-                                            <td>2023-11-01</td>
+                                            <td>Lucinta Lunox</td>
+                                            <td>2024-11-25</td>
                                             <td>17:30</td>
                                             <td>19:30</td>
                                             <td>Proyek C</td>
@@ -143,8 +143,8 @@
                                         </tr>
                                         <tr>
                                             <td>4</td>
-                                            <td>Emily Davis</td>
-                                            <td>2023-11-01</td>
+                                            <td>Kuronya</td>
+                                            <td>2024-11-25</td>
                                             <td>17:15</td>
                                             <td>20:15</td>
                                             <td>Proyek D</td>
@@ -164,9 +164,9 @@
                     <div class="d-flex align-items-center justify-content-between small">
                         <div class="text-muted">UTS Raden Achmad Ajru Ramadhan</div>
                         <div>
-                            <a href="#">Privacy Policy</a>
+                            <a href="#">221011400261</a>
                             &middot;
-                            <a href="#">Terms &amp; Conditions</a>
+                            <a href="#">05TPLP006</a>
                         </div>
                     </div>
                 </div>
