--- a/karyawan.html
+++ b/karyawan.html
@@ -14,6 +14,7 @@
 </head>
 <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+        <img src="assets/img/UNPAM_logo1.png" alt="Foto Ajru" class="profile-img">
         <a class="navbar-brand ps-3" href="index.html">UNIVERSITAS <br>PAMULANG</a>
         <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
         <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
