--- a/karyawan.html
+++ b/karyawan.html
@@ -115,114 +115,14 @@
                                     <th>Aksi</th>
                                 </tr>
                             </thead>
-                            <tfoot>
-                                <tr>
-                                    <th>Nomor</th>
-                                    <th>Kode</th>
-                                    <th>Nama</th>
-                                    <th>Email</th>  
-                                    <th>Alamat</th>
-                                    <th>Jabatan</th>
-                                    <th>Aksi</th>
-                                </tr>
-                            </tfoot>
                             <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>KY001</td>
-                                    <td>Ajru Ramadhan</td>
-                                    <td>ajruramadhan25@gmail.com</td>
-                                    <td>JL. Pahlawan Seribu</td>
-                                    <td>Staff</td>
-                                    <td>
-                                        <div class="d-flex justify-content-around">
-                                            <button class="btn btn-warning btn-sm" title="Edit">
-                                                <i class="fas fa-edit text-white"></i>
-                                            </button>
-                                            <button class="btn btn-danger btn-sm" title="Hapus">
-                                                <i class="fas fa-trash text-white"></i>
-                                            </button>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>KY002</td>
-                                    <td>Lucinta Lunox</td>
-                                    <td>lucintalunox@gmail.com</td>
-                                    <td>JL. Land Of Dawn</td>
-                                    <td>Kepala Bagian</td>
-                                    <td>
-                                        <div class="d-flex justify-content-around">
-                                            <button class="btn btn-warning btn-sm" title="Edit">
-                                                <i class="fas fa-edit text-white"></i>
-                                            </button>
-                                            <button class="btn btn-danger btn-sm" title="Hapus">
-                                                <i class="fas fa-trash text-white"></i>
-                                            </button>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>KY003</td>
-                                    <td>Nina</td>
-                                    <td>Nina@gmail.com</td>
-                                    <td>JL. Heart II</td>
-                                    <td>Kepala Sub Bagian</td>
-                                    <td>
-                                        <div class="d-flex justify-content-around">
-                                            <button class="btn btn-warning btn-sm" title="Edit">
-                                                <i class="fas fa-edit text-white"></i>
-                                            </button>
-                                            <button class="btn btn-danger btn-sm" title="Hapus">
-                                                <i class="fas fa-trash text-white"></i>
-                                            </button>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>4</td>
-                                    <td>KY004</td>
-                                    <td>Lantai Licin</td>
-                                    <td>licin@gmail.com</td>
-                                    <td>JL. Motorola 12</td>
-                                    <td>Warek I</td>
-                                    <td>
-                                        <div class="d-flex justify-content-around">
-                                            <button class="btn btn-warning btn-sm" title="Edit">
-                                                <i class="fas fa-edit text-white"></i>
-                                            </button>
-                                            <button class="btn btn-danger btn-sm" title="Hapus">
-                                                <i class="fas fa-trash text-white"></i>
-                                            </button>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>5</td>
-                                    <td>KY005</td>
-                                    <td>Kuronya</td>
-                                    <td>kuronya@gmail.com</td>
-                                    <td>JL. Polok</td>
-                                    <td>Warek I</td>
-                                    <td>
-                                        <div class="d-flex justify-content-around">
-                                            <button class="btn btn-warning btn-sm" title="Edit">
-                                                <i class="fas fa-edit text-white"></i>
-                                            </button>
-                                            <button class="btn btn-danger btn-sm" title="Hapus">
-                                                <i class="fas fa-trash text-white"></i>
-                                            </button>
-                                        </div>
-                                    </td>
-                                </tr>
+                                <!-- Data akan ditambahkan secara dinamis dengan JavaScript -->
                             </tbody>
                         </table>
                     </div>
                 </div>
             </main>
-            
+
             <footer class="py-4 bg-light mt-auto">
                 <div class="container-fluid px-4">
                     <div class="d-flex align-items-center justify-content-between small">
@@ -237,6 +137,7 @@
             </footer>
         </div>
     </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
@@ -244,5 +145,8 @@
     <script src="assets/demo/chart-bar-demo.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
     <script src="js/datatables-simple-demo.js"></script>
+    <script src="js/karyawan.js"></script>
+
+   
 </body>
 </html>
