--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
                                         <i class="fas fa-calendar-check me-2"></i>
                                         Absensi
                                     </a>
-                                    <a class="nav-link" href="divisi.html">
+                                    <a class="nav-link" href="izin.html">
                                         <i class="fas fa-file-alt me-2"></i>
                                         Izin
                                     </a>
-                                    <a class="nav-link" href="divisi.html">
+                                    <a class="nav-link" href="lembur.html">
                                         <i class="fas fa-clock me-2"></i>
                                         Lembur
                                     </a>
