--- a/izin.html
+++ b/izin.html
@@ -94,8 +94,8 @@
                             Data Izin
                         </div>
                         <div class="card-body">
-                            <div class="mb-3" style="text-align: right;" >
-                                <button class="btn btn-warning text-white" ><i class="fas fa-sync-alt"></i> Ubah Status</button>
+                            <div class="mb-3" style="text-align: right;">
+                                <button class="btn btn-warning text-white" data-bs-toggle="modal" data-bs-target="#statusModal"><i class="fas fa-sync-alt"></i> Ubah Status</button>
                             </div>
                             <div class="table-responsive">
                                 <table class="table table-bordered" id="datatablesSimple" width="100%" cellspacing="0">
@@ -160,43 +160,72 @@
                     <div class="d-flex align-items-center justify-content-between small">
                         <div class="text-muted">UTS Raden Achmad Ajru Ramadhan</div>
                         <div>
-                            <a href="#">221011400261</a>
+                            <a href="#!">Privacy Policy</a>
                             &middot;
-                            <a href="#">05TPLP006</a>
+                            <a href="#!">Terms &amp; Conditions</a>
                         </div>
                     </div>
                 </div>
             </footer>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
-    <script src="js/scripts.js"></script>
+
+    <!-- Status Change Modal -->
+    <div class="modal fade" id="statusModal" tabindex="-1" aria-labelledby="statusModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="statusModalLabel">Ubah Status</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form onsubmit="ubahStatus(event)">
+                        <div class="mb-3">
+                            <label for="rowNumber" class="form-label">Nomor Baris (1 - 4):</label>
+                            <input type="number" id="rowNumber" class="form-control" required min="1" max="4">
+                        </div>
+                        <div class="mb-3">
+                            <label for="newStatus" class="form-label">Status Baru:</label>
+                            <select id="newStatus" class="form-select" required>
+                                <option value="Disetujui">Disetujui</option>
+                                <option value="Menunggu">Menunggu</option>
+                                <option value="Ditolak">Ditolak</option>
+                            </select>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Ubah Status</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"></script>
+    <script src="js/datatables-simple-demo.js"></script>
     <script>
-        // Simple Datatables
-        const dataTable = new simpleDatatables.DataTable("#datatablesSimple");
+        function ubahStatus(event) {
+            event.preventDefault(); // Prevent form submission
+            const rowNumber = document.getElementById('rowNumber').value;
+            const newStatus = document.getElementById('newStatus').value;
 
-        
-
-        // Function to filter table based on search input
-        function searchTable() {
-            const input = document.getElementById("searchInput");
-            const filter = input.value.toLowerCase();
-            const table = document.getElementById("datatablesSimple");
-            const tr = table.getElementsByTagName("tr");
-
-            for (let i = 1; i < tr.length; i++) { // Start from 1 to skip the header row
-                const td = tr[i].getElementsByTagName("td");
-                let rowVisible = false;
-
-                for (let j = 1; j < td.length - 1; j++) { // Exclude the first and last column (No and Status)
-                    if (td[j].textContent.toLowerCase().indexOf(filter) > -1) {
-                        rowVisible = true;
-                        break;
-                    }
+            // Logic to change status (update the table and display the new status)
+            const statusCell = document.querySelector(`#datatablesSimple tbody tr:nth-child(${rowNumber}) td:last-child .badge`);
+            if (statusCell) {
+                statusCell.textContent = newStatus;
+                // Update the class based on the new status
+                if (newStatus === "Disetujui") {
+                    statusCell.className = "badge bg-success";
+                } else if (newStatus === "Menunggu") {
+                    statusCell.className = "badge bg-warning";
+                } else if (newStatus === "Ditolak") {
+                    statusCell.className = "badge bg-danger";
                 }
-                tr[i].style.display = rowVisible ? "" : "none";
             }
+
+            // Close the modal after updating
+            const modal = bootstrap.Modal.getInstance(document.getElementById('statusModal'));
+            modal.hide();
         }
     </script>
 </body>
