--- a/lembur.html
+++ b/lembur.html
@@ -221,6 +221,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"></script>
     <script src="js/datatables-simple-demo.js"></script>
+    <script src="js/scripts.js"></script>
     <script>
         function ubahStatus(event) {
             event.preventDefault(); // Prevent form submission
